--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -160,3 +160,55 @@ p.test2 {
 .card-hover:hover {
     transform: translateY(-3px);
 }
+
+.animated {
+    animation: up-down 2s ease-in-out infinite alternate-reverse both;
+  }
+.animated2 {
+    animation: up-down2 2s ease-in-out infinite alternate-reverse both;
+  }
+  
+@-webkit-keyframes up-down {
+    0% {
+      transform: translateY(10px);
+    }
+  
+    100% {
+      transform: translateY(-10px);
+    }
+  }
+  
+  @keyframes up-down {
+    0% {
+      transform: translateY(5px);
+    }
+  
+    100% {
+      transform: translateY(-10px);
+    }
+  }
+  
+
+
+
+
+  @-webkit-keyframes up-down2 {
+    0% {
+      transform: translateY(8px);
+    }
+  
+    100% {
+      transform: translateY(-8px);
+    }
+  }
+  
+  @keyframes up-down2 {
+    0% {
+      transform: translateY(8px);
+    }
+  
+    100% {
+      transform: translateY(-8px);
+    }
+  }
+  
